--- a/src/components/pages/EditColor/EditColor.scss
+++ b/src/components/pages/EditColor/EditColor.scss
@@ -3,7 +3,7 @@
 .EditColor {
   margin: 0 auto;
   margin-top: 130px;
-  margin-bottom: 50px;
+  margin-bottom: 50px !important;
   padding: 45px 20px;
   max-width: 80%;
   background-color: #fff;
@@ -88,6 +88,7 @@
 @media only screen and (max-width: 620px) {
   .EditColor {
     margin-top: -25px;
+    margin-bottom: 50px !important;
     padding: 25px 10px;
 
     h2 {
