--- a/src/components/pages/NewColor/NewColor.scss
+++ b/src/components/pages/NewColor/NewColor.scss
@@ -3,7 +3,7 @@
 .NewColor {
   margin: 0 auto;
   margin-top: 130px;
-  margin-bottom: 50px;
+  margin-bottom: 50px !important;
   padding: 45px 20px;
   max-width: 80%;
   background-color: #fff;
@@ -83,6 +83,7 @@
   .NewColor {
     margin-top: -25px;
     padding: 25px 10px;
+    margin-bottom: 50px !important;
 
     h2 {
       font-size: 28px !important;
